--- a/.travis.yml
+++ b/.travis.yml
@@ -4,15 +4,12 @@ jdk:
   - oraclejdk7
   - openjdk7
 
-after_success:
-  - "./build.sh"
-
 deploy:
   provider: releases
   api_key:
     secure: aBYrIqfhXWExsXTgbo48jZC4iX3BuwNqixfLCWlfozY/VElMyiz4GvJnon1LYYYqhjC97zUc80P91UMcVELCKmI/9qhcINTs/mDXc8EpgLI4c4npDLbC7ZQ3oAJ5FwZczfQPzRwSIpKIMNGugpZc7tITZ/RL6lrBGRLfZUK9qco=
-  file:
-    - "${PKG_AIR_ASSET}"
+  file_glob: true
+  file: air-util/target/*.jar
   skip_cleanup: true
   on:
     tags: true
