--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <!-- ====================================================================== -->
@@ -8,7 +7,7 @@
     <!-- ====================================================================== -->
     <groupId>com.lonelystorm.air</groupId>
     <artifactId>air-parent</artifactId>
-    <version>0.0.4-SNAPSHOT</version>
+    <version>0.1.0</version>
     <packaging>pom</packaging>
 
     <name>LonelyStorm Air - Reactor</name>
@@ -40,7 +39,8 @@
         <connection>scm:git:git://github.com/LonelyStorm/air.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/LonelyStorm/air.git</developerConnection>
         <url>https://github.com/LonelyStorm/air</url>
-    </scm>
+      <tag>v0.1.0</tag>
+  </scm>
 
     <issueManagement>
         <system>Github Issues</system>
@@ -295,7 +295,7 @@
                                         </goals>
                                     </pluginExecutionFilter>
                                     <action>
-                                        <ignore></ignore>
+                                        <ignore />
                                     </action>
                                 </pluginExecution>
                                 <pluginExecution>
@@ -308,7 +308,7 @@
                                         </goals>
                                     </pluginExecutionFilter>
                                     <action>
-                                        <ignore></ignore>
+                                        <ignore />
                                     </action>
                                 </pluginExecution>
                             </pluginExecutions>
