--- a/air-asset/pom.xml
+++ b/air-asset/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>com.lonelystorm.air</groupId>
         <artifactId>air-parent</artifactId>
-        <version>0.1.2-SNAPSHOT</version>
+        <version>0.1.2</version>
     </parent>
 
     <!-- ====================================================================== -->
