--- a/pom.xml
+++ b/pom.xml
@@ -400,6 +400,13 @@
                 <version>2.6</version>
             </dependency>
 
+            <!-- Guava -->
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>18.0</version>
+            </dependency>
+
             <!-- Jackson -->
             <dependency>
                 <groupId>org.codehaus.jackson</groupId>
