--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <!-- ====================================================================== -->
     <groupId>com.lonelystorm.air</groupId>
     <artifactId>air-parent</artifactId>
-    <version>0.1.9-SNAPSHOT</version>
+    <version>0.1.9-CACI-1</version>
     <packaging>pom</packaging>
 
     <name>LonelyStorm Air - Reactor</name>
